# RobotScheduler

./: .gitignore  CMakeLists.txt  README.md  备注.txt  大规模机器人调度系统详细设计与实现方案.md  系统使用说明.md
assets/: config.json
docs/: PROJECT_METHODOLOGY.md
include/: Grid.h  RobotPathFinder.h
src/: Grid.cpp  RobotPathFinder.cpp  main.cpp
src/backend/: Coordinator.cpp  Coordinator.h  PathPlanner.cpp  PathPlanner.h
src/core/: Map.cpp  Map.h  Position.h  Robot.cpp  Robot.h  Scheduler.cpp  Scheduler.h  Task.cpp  Task.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/frontend/: MainWindow.cpp  MainWindow.h  MonitorPage.cpp  MonitorPage.h  TaskPage.cpp  TaskPage.h
